--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-async-timeout==1.2.1
+aiohttp==2.2.5
+async-timeout==1.4.0
 cffi==1.10.0
 chardet==3.0.4
-discord.py==0.16.9
+discord.py==0.16.11
 multidict==3.1.3
 pycparser==2.18
+PyNaCl==1.1.2
 six==1.10.0
-websockets==3.3
+websockets==3.4
 yarl==0.12.0
